force-app/main/default/objects/Survey_Question__c/fields/Choices__c.field-meta.xml
<CustomField>
    <fullName>Choices__c</fullName>
    <label>Choices</label>
    <type>TextArea</type>
</CustomField>