force-app/main/default/objects/Survey_Question__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>Field to specify in which position the question is in the survey.</description>
    <inlineHelpText>Enter the position of the question within the survey here.</inlineHelpText>
    <label>OrderNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>