force-app/main/default/objects/Survey_Question__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the question required?</description>
    <inlineHelpText>Check this box if you want the taker to be required to take the question.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>