force-app/main/default/objects/Survey_Question__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>SurveyQuestions</relationshipLabel>
    <relationshipName>SurveyQuestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>