force-app/main/default/objects/Survey_Question__c/fields/Total_Responses__c.field-meta.xml
<CustomField>
    <fullName>Total_Responses__c</fullName>
    <label>Total Responses</label>
    <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>